feat: extend sln to 1

--- a/hw04.tex
+++ b/hw04.tex
@@ -158,20 +158,25 @@
   \begin{enumerate}
      \item Отсортируйте патроны за $\O(nk)$.
      \begin{solution}
-      Пройдем по исходному массиву и разобьем его на подмассивы длиной не более чем k. Для каждого такого подмассива выполним сортировку вставками. Так как подмассивы почти отсортированы, то будет работать лучший сценарий для сортировки вставками $\O(k)$. Так как мы эту процедуру будем повторять для всех $n$, то время работы такого алгоритма будет $\O(nk)$.
+      За такую асимптотику может отработать сортировка вставками. Идем по массиву от 0 до $n-1$: на каждом элементе запускаем новый проход от $i$ до $i-k$ и сравниваем элементы. Это будет работать корректно, потому что известно, что каждый элемент отклонился от истинной позиции не более чем на $k$, поэтому диапазон второго прохода можно таким образом сократить по сравнению с оригинальным алгоритмом сортировки вставками. Так как мы эту процедуру будем повторять для каждого элемента из $n$ и количество сравнений не более чем $k$, то время работы такого алгоритма будет $\O(nk)$.
      \end{solution}
      \item Отсортируйте патроны за $\O(n + I)$, 
       где $I$ --- число инверсий.
      \begin{solution}
-      Тоже будем использовать алгоритм сортировки вставками. Так как в процессе работы алгоритма меняются местами только соседние элементы, то совокупное число инверсий при каждом свапе уменьшается на 1. Поэтому количество обменов совпадает с числом инверсий в исходном массиве. Такой алгоритм будет работать за $\O(n + I)$.
+      Тоже будем использовать алгоритм сортировки вставками. Рассмотрим промежуточный случай: мы смотрим на какой-то элемент, который нужно вставить в массив левее, который уже отсортирован. Мы идем от текущего положения до $i-k$, но при этом обрываем текущий подпроход, если какой-то элемент при сравнении оказался меньше текущего -- своего рода оптимизация. А так алгоритм почти такой же, как в предыдущем пункте. Так как в процессе работы алгоритма меняются местами только соседние элементы, то совокупное число инверсий при каждом свапе уменьшается на 1. Поэтому количество обменов совпадает с числом инверсий в исходном массиве. В таком случае соблюдается асимптотика $\O(n + I)$, потому что мы прошли по массиву длиной $n$ и выполнили подпроходов по массиву длины $I$ -- инверсии в исходном массиве.
      \end{solution}
      \item Докажите нижнюю оценку на время сортировки $\Omega(n \log k)$.
      \begin{solution}
-      Ну, любой алгоритм сортировки, основанный на сравнениях будет иметь такую нижнюю оценку. А раз этот алгоритм работает на сравнениях, то он работает за $\Omega(n \log k)$.
+      Здесь наверное стоит сказать, что любой алгоритм сортировки, основанный на сравнениях будет иметь нижнюю оценку $\Omega(n \log n)$. В данном случае раз массив почти отсортирован, то есть положение каждого элемента отклоняется от своего истинного не более чем на $k$, то можно при сортировке вставками использовать еще одну оптимизацию -- реализовывать бинпоиск позиции, в которую нужно поставить текущий элемент, в левом подмассиве. Быстрее позицию мы найти не можем, а бинпоиск будет работать как раз за $\log k$, так как мы будем искать на подмассиве длины $k$, раз известно, что массив почти отсортирован. Получается, пройдясь по всем элементам, реализуя сортировку вставками с бинпоиском позиции вставки, мы получим асимптотику $\Omega(n \log k)$.
      \end{solution}
      \item Отсортируйте патроны за $\O(n \log k)$.
      \begin{solution}
-      Вместо линейного поиска позиции будем использовать бинарный поиск, поэтому, пройдясь по каждому из $n$ элементов мы будем искать для него позицию за $\O(\log k)$. Тогда суммарное время работы алгоритма будет $\O(n \log k)$.
+      Для получения такой асимптотики можно использовать минкучу. Так как известно, что каждый элемент отклонился от своего истинного положения не более чем на $k$ позиций, можно составить минкучу на $k+1$ элементе, извлечь из этой кучи минимум и гарантировать, что этот элемент будет минимальным на всем подмассиве от текущей позиции до конца. Собственно, стратегия такая: ставим указатель на нулевой элемент массива, строим кучу на $k+1$ элементе, начиная с текущего. На лекции доказывали, что по заданному массиву куча строится за линию. В данном случае куча построится за $\O(k+1)$. Теперь извлечем минимум за $\O(\log (k+1))$ и запишем его в новый результирующий массив за $\O(1)$, добавив в конец массива. На следующем шаге добавим следующий элемент исходного массива в нашу кучу и восстановим ее свойства за $\O(\log (k+1))$. Дальше снова извлекаем минимум и так далее. В общем, нужно будет обойти $n-(k+1)$ элемент и выполнить каждый раз описанные выше действия. На данном этапе в результирующем массиве будет $n-(k+1)$ элементов. Оставшиеся $(k+1)$ элементов находятся в куче. Добавим их в результирующий массив выполняя операцию извлечения минимума $(k+1)$ раз. В итоге получаем асимптотику:
+      \begin{eqnarray}
+        \O(k+1) + \O(n) + (n-(k+1)) \cdot \O(\log (k+1)) + (k+1) \cdot \O(\log (k+1)) = \\
+        \O(k+1) + \O(n) + n \cdot \O(\log (k+1)) = \O(n) + n \cdot \O(\log k) = \O(n\log k)
+      \end{eqnarray}
+      Корректность здесь соблюдается, так как при каждом добавлении в результирующий массив элемента из кучи мы можем гарантировать, что он действительно наименьший на подмассиве от текущего положения до конца, так как выполняется свойство минкучи и массив почти отсортирован, то есть каждый элемент отклонился на более чем на $k$ от своей истинной позиции в отсортированном массиве.
      \end{solution}
   \end{enumerate}
 
