upd: algo_template

--- a/algo_template.tex
+++ b/algo_template.tex
@@ -87,6 +87,7 @@
   % \input{hw01.tex}
   % \input{hw02.tex}
   % \input{hw03.tex}
-  \input{hw04.tex}
+  % \input{hw04.tex}
+  \input{hw05.tex}
 
 \end{document}
