sln: add sln to 1

--- a/hw05.tex
+++ b/hw05.tex
@@ -109,6 +109,15 @@
     Дан массив из $2 \cdot n - 1$ числа, который нельзя
     модифицировать. Есть дополнительная память на $n + 1$ элемент
     массива и ещё $\O(1)$ сверху. Требуется найти медиану за $\O(n \log n)$.
+    \begin{solution}
+      Для решения поставленной задачи будем использовать две кучи: одна минкуча, вторая макскуча. При проходе по массиву будем следить за тем, чтобы размеры куч либо совпадали либо отличались на один элемент (от этого будет зависеть, в какую кучу будем вставлять следующий элемент), минимальный элемент минкучи (корень) был больше максимального элемента макскучи (тоже корень), а также будем поддерживать следующий инвариант: суммарное число элементов в обеих кучах не превосходит $n+1$. В этой задаче хочется воспользоваться тем соображением, что для определения медианы не нужно обладать информацией обо всех элементах одновременно. Я имею в виду следующую ситуацию: предположим у нас есть уже отсортированный массив; если мы уберем $k$ первых и $k$ последних элементов (понятно, что должно соблюдаться условие $2k\leq n-1$, где $n$ -- длина массива), то медиана не изменится.
+
+      Поэтому предлагаю следующий алгоритм: начинаем проходиться по массиву, поддерживая инвариант: суммарное количество элементов в обеих кучах не превосходит $n+1$ и минимальный элемент минкучи был больше максимального элемента макскучи. Как определять, в какую кучу вставлять элемент: если очередной элемент больше корня макскучи, то вставляем его в минкучу, в противном случае -- в макскучу. В какой-то момент суммарно в обеих кучах оказывается $n+1$ элемент. В этот момент начнем либо отбрасывать приходящие элементы, либо заменять некоторые элементы в кучах на приходящие. Как это сделать: если элемент больше максимального в минкуче, то скипаем его; если элемент меньше максимального в минкуче и больше минимального в минкуче, то удаляем максимальный и вставляем в минкучу текущий; если элемент меньше минимального в макскуче, то скипаем его; если элемент больше минимального в макскуче и меньше максимального в макскуче, то удаляем минимальный и вставляем в макскучу текущий.
+
+      Когда дойдем до конца, нужно будет извлечь медиану: если $n+1$ нечетно и количество элементов в минкуче нечетно, то медиана -- корень минкучи; если $n+1$ нечетно и количество элементов в макскуче нечетно, то медиана -- корень макскучи. Если $n+1$ четно, то медиана -- корень макскучи.
+
+      Корректность: так как мы отбрасывали либо самые минимальные, либо самые максимальные элементы, то в сжатом массиве положение медианы не изменилось. Время: прошлись по всем элементам $n$, на каждом шаге выполняли операции с кучами ($\O(\log n)$), поэтому суммарное время $\O(n\log n)$
+    \end{solution}
 
   \item[4.]
     Даны массив из $n$ чисел и $m$ чисел $p_1, p_2, \dots p_m$, нужно за
