--- a/algo_template.tex
+++ b/algo_template.tex
@@ -88,6 +88,7 @@
   % \input{hw02.tex}
   % \input{hw03.tex}
   % \input{hw04.tex}
-  \input{hw05.tex}
+  % \input{hw05.tex}
+  \input{hw06.tex}
 
 \end{document}
