sln: add sln to 1

--- a/hw06.tex
+++ b/hw06.tex
@@ -69,6 +69,33 @@
     положительное число, общее для всех фонарей.
     Найдите минимальное $d$, при котором вся улица освещена. $\O(n)$, $a_i$ не отсортированы.
 
+    \begin{solution}
+      На входе имеем массив неотсортированных координат $a_i$. Если каждую координату $a_i$ поделить на $l$, то становится удобно применить блочную сортировку (bucket sort). На лекции доказывали, что
+      \begin{equation}
+        \mathbb{E}\, T(n) = \O(n).
+      \end{equation}
+      За линейное время получили отсортированный массив $a_i$. Теперь соображения, которые помогут решить задачу: когда мы будем выбирать конкретное $d$, которое мы хотим минимизировать, мы должны учесть, что оно будет не меньше расстояния от начала улицы до первого фонаря, и оно будет не меньше расстояния от последнего фонаря до конца улицы, и оно будет не меньше половины максимального расстояния между ``внутренними'' фонарями. Половина здесь берется из-за того, что чтобы покрыть территорию между соседними фонарями, достаточно, чтобы каждый из этих фонарей мог покрыть только половину расстояния, тогда в сумме они покроют все расстояние. Так как мы получили отсортированные отнормированные $a_i$, то обозначим их как $a_i'$, а отнормированное $d$ как $d'$, тогда:
+      \begin{equation} \label{distances}
+        \begin{cases}
+          d' \geq a_0' - 0, \\
+          d' \geq 1 - a_n', \\
+          d' \geq \max(\delta_i) / 2, \quad if n > 1 \Rightarrow \forall i \in [0, n - 1]
+        \end{cases}
+      \end{equation}
+      где $\delta_i$ представляет собой расстояния между соседними фонарями. $\delta_i$ вычисляется через разность между $i+1$-м фонарем и $i$-м фонарем. При этом $i$ пробегает от 0 до $n - 1$. Решим систему неравенств (\ref{distances}) и получим минимальное $d_0'$. Теперь умножим $d_0'$ на $l$, чтобы вернуться к исходным размерам:
+      \begin{equation}
+        d_0 = d_0' \cdot l.
+      \end{equation}
+      Это расстояние $d_0$ и будет искомым расстоянием.
+
+      \textit{Корректность}: пусть известен ответ $d_{ans}$. Покажем, что $d_0$, который выдает наш алгоритм, не хуже. Если фонарь только один, то $d_{ans}$ будет равен максимальному из расстояний от начала улицы до фонаря и от фонаря до конца улицы. Наш алгоритм получает точно такой же результат: если $n = 1$, то массив из одного элемента уже отсортирован, следовательно, в системе (\ref{distances}) остаются два первых неравенства. Решая систему неравенств будет выбрано $d_0'$, которое в данном случае будет представлять собой максимальное из расстояний от начала улицы до единственного фонаря и от этого фонаря до конца улицы. $d_0'$ умножается в конце на $l$. Понятно, что так как выбрано максимальное расстояние, оно покроет всю улицу целиком. Теперь, если фонарей $n \neq 1$: $d_{ans}$ будет больше или равен расстояния начала улицы до первого фонаря, а также он будет больше или равен от конца улицы до последнего фонаря, и еще он будет таким, чтобы покрыть расстояние между максимально удаленными соседними фонарями. Наш алгоритм получает точно такой же ответ: сначала алгоритм сортирует $a_i'$, потом подсчитывает $\delta_i$ -- расстояния между всеми соседними фонарями и отбирает максимальное из этих расстояний. После этого алгоритм выбирает минимальное подходящее $d_0'$, которое не меньше, чем расстояние от начала улицы до первого фонаря, и не меньше, чем расстояние от конца улицы до последнего фонаря, и не меньше, чем половина расстояния между максимально удаленными соседними фонарями. $d_0'$ умножается в конце на $l$.
+
+      \textit{Асимптотика}: алгоритм сначала нормирует элементы массива за $\O(n)$, потом сортирует массив с помощью блочной сортировки за $\O(n)$, потом строит $\delta_i$ за $\O(n)$, потом выбирает максимум из $\delta_i$ за $\O(n)$, потом выбирает $d_0'$ за $\O(1)$ и в конце получает $d_0$ за $\O(1)$. В сумме:
+      \begin{equation}
+        T(n) = \O(n) + \O(n) + \O(n) + \O(n) + \O(1) + \O(1) = \O(n).
+      \end{equation}
+    \end{solution}
+
   \item
     Есть массив $a_i$, состоящий из $n$ неотрицательных целых чисел. Найти минимальное натуральное
     число, которого нет в массиве, за $\O(n)$ времени и $\O(1)$ дополнительной памяти.
