sln: add sln to 2

--- a/hw06.tex
+++ b/hw06.tex
@@ -102,6 +102,30 @@
     Входной массив доступен для записи. \\
     Замечание: $0 \leq a_i < 2^w$, где $w$ -- размер одной ячейки массива в битах.
 
+    \begin{solution}
+      Так как $a_i$ -- целые неотрицательные числа, то можно попытаться поработать с ними как с индексами. Будем при проходе расставлять элементы на свои места. Если попалась единица, то она должна стоять на нулевой позиции. Если, например, попалась пятерка, то она должна стоять на четвертой позиции из-за того, что индексы начинаются с нуля. Обозначим $a_i$ как $a[i]$. Тогда хочется, чтобы элемент $a[i]$ стоял на позиции $a[a[i]-1]$. При этом значение элемента (со сдвигом на 1) может быть больше размера массива, поэтому будем расставлять только те элементы, которые могут занять правильную позицию ($a[i] = a[a[i]-1]$). После прохода, на котором были расставлены (насколько возможно) $a[i]$ в правильные позицию, можно совершить еще один проход: начинаем с начала массива, и пока не обнаружим элемент, который не соответствует своей правильной позиции, идем до конца. Если на $i$-ой итерации стоит неправильный элемент ($a[i] \neq i + 1$), то возвращаем $i + 1$ в качестве ответа. Если дошли до конца массива, то возвращаем $n + 1$. Псевдокод, чтобы было понятнее:
+      \begin{itemize}
+        \item Цикл по $i$ от 0 до размера массива:
+        
+        \hspace{10mm} Пока $a[i]$ не превосходит размера массива и $a[i]$ не равно $a[a[i]-1]$ повторяем:
+
+        \hspace{20mm} Свап $a[i]$ и $a[a[i]-1]$
+
+        Цикл по $i$ от 0 до размера массива:
+
+        \hspace{10mm} Если $a[i]$ не равно $i + 1$, то возвращаем $i + 1$
+
+        Возвращаем $n + 1$
+      \end{itemize}
+
+      Корректность: допустим нам известен ответ, который можно получить следующим образом: отсортируем исходный массив и начнем проходить по нему с начала. Каждый следующий элемент будет превосходить текущий либо на 0, либо на 1, либо больше, чем на 1. Если превосходит на 0 или 1, то идем дальше, если больше, чем на один, то возвращаем текущий элемент, увеличенный на 1. Покажем, что наш алгоритм получает результат не хуже этого. В первом цикле алгоритм расставил все элементы, которые возможно, на ``правильные'' места. Во втором цикле алгоритм нашел позицию первого ``неправильно'' стоящего элемента и потом вычислил минимальное число (добавил 1 к позиции). Видно, что результат не хуже ответа.
+
+      Асимптотика: первый цикл работает за $\O(n)$, потому что, если приходит число, которое превосходит размер массива, то ничего не происходит, и итератор просто увеличивается на 1. Или, если приходит число, которое можно поставить на ``правильное'' место, то происходит свап за $\O(1)$, потом снова проверяется, можно ли поставить на нужное место. В худшем случае этот внутренний цикл на какой-нибудь итерации проделает $\O(n)$ шагов, но в таком случае на всех остальных итерациях внешнего цикла ничего происходить не будет, поэтому можно сказать, что в сумме будет ($\O(n)+\O(n)=\O(n)$). Второй цикл работает за $\O(n)$ ($n \cdot \O(1)$). В конце возвращение значения за $\O(1)$. В сумме:
+      \begin{equation}
+        T(n) = \O(n) + \O(n) + \O(1) = \O(n).
+      \end{equation}
+    \end{solution}
+
   \item
     Даны $n$ точек на плоскости ($x_i, y_i$) с весами $w_i \ge 0$. Найти точку ($x^{*}, y^{*}$):
     \begin{enumerate}
