sln: add sln to 2

--- a/hw06.tex
+++ b/hw06.tex
@@ -120,7 +120,7 @@
 
       Корректность: допустим нам известен ответ, который можно получить следующим образом: отсортируем исходный массив и начнем проходить по нему с начала. Каждый следующий элемент будет превосходить текущий либо на 0, либо на 1, либо больше, чем на 1. Если превосходит на 0 или 1, то идем дальше, если больше, чем на один, то возвращаем текущий элемент, увеличенный на 1. Покажем, что наш алгоритм получает результат не хуже этого. В первом цикле алгоритм расставил все элементы, которые возможно, на ``правильные'' места. Во втором цикле алгоритм нашел позицию первого ``неправильно'' стоящего элемента и потом вычислил минимальное число (добавил 1 к позиции). Видно, что результат не хуже ответа.
 
-      Асимптотика: первый цикл работает за $\O(n)$, потому что, если приходит число, которое превосходит размер массива, то ничего не происходит, и итератор просто увеличивается на 1. Или, если приходит число, которое можно поставить на ``правильное'' место, то происходит свап за $\O(1)$, потом снова проверяется, можно ли поставить на нужное место. В худшем случае этот внутренний цикл на какой-нибудь итерации проделает $\O(n)$ шагов, но в таком случае на всех остальных итерациях внешнего цикла ничего происходить не будет, поэтому можно сказать, что в сумме будет ($\O(n)+\O(n)=\O(n)$). Второй цикл работает за $\O(n)$ ($n \cdot \O(1)$). В конце возвращение значения за $\O(1)$. В сумме:
+      Асимптотика: первый цикл работает за $\O(n)$, потому что, если приходит число, которое превосходит размер массива, то ничего не происходит, и итератор просто увеличивается на 1. Или, если приходит число, которое можно поставить на ``правильное'' место, то происходит свап за $\O(1)$, потом снова проверяется, можно ли поставить очередное число на нужное место. В худшем случае этот внутренний цикл на какой-нибудь итерации проделает $\O(n)$ шагов, но в таком случае на всех остальных итерациях внешнего цикла ничего происходить не будет, поэтому можно сказать, что в сумме будет ($\O(n)+\O(n)=\O(n)$). Второй цикл работает за $\O(n)$ ($n \cdot \O(1)$). В конце возвращение значения за $\O(1)$. В сумме:
       \begin{equation}
         T(n) = \O(n) + \O(n) + \O(1) = \O(n).
       \end{equation}
