--- a/hw06.tex
+++ b/hw06.tex
@@ -130,6 +130,11 @@
     Даны $n$ точек на плоскости ($x_i, y_i$) с весами $w_i \ge 0$. Найти точку ($x^{*}, y^{*}$):
     \begin{enumerate}
       \item \onlygroup{Крыштаповича} $\max\limits_i \Bigl[ \max(|x_i-x^{*}|, |y_i-y^{*}|) \Bigr] \rightarrow \min$
+      \begin{solution}
+        Если рассмотреть одномерную задачу, когда даны $x_i$ с весами $w_i$, то можно понять, что благодаря модулям и разности наша функция отдаленно напоминает параболу. На $\pm \infty$ она уходит в бесконечность, а в диапазоне $x_i$ она принимает какие-то ограниченные значения (если $w_i$ ограничены). Так как функция модуля линейна, все точки (на двумерном графике, где по абсциссе $x_i$, а по ординате $w_i$) будут соединены линиями. Минимум же данной функции будет находиться в точке с наименьшим весом. При этом может возникнуть плато. Наверное, это никак не испортит ситуацию.
+
+        Вернемся к $(x_i, y_i)$. Рассуждения аналогичные одномерной задачи. Находим подходящую точку сначала для $x$, потом для $y$ и получаем $(x^{*}, y^{*})$.
+      \end{solution}
       \item \onlygroup{Крыштаповича} $\max\limits_i \Bigl[ |x_i-x^{*}|+|y_i-y^{*}|  \Bigr] \rightarrow \min$
       \item \onlygroup{Крыштаповича} $\sum\limits_i \Bigl[ (x_i-x^{*})^2+(y_i-y^{*})^2  \Bigr] \rightarrow \min$
       \item $\sum\limits_i \Bigl[ w_i(|x_i-x^{*}|+|y_i-y^{*}|) \Bigr] \rightarrow \min$
