sln: add sln to 3 (a)

--- a/hw06.tex
+++ b/hw06.tex
@@ -131,9 +131,25 @@
     \begin{enumerate}
       \item \onlygroup{Крыштаповича} $\max\limits_i \Bigl[ \max(|x_i-x^{*}|, |y_i-y^{*}|) \Bigr] \rightarrow \min$
       \begin{solution}
-        Если рассмотреть одномерную задачу, когда даны $x_i$ с весами $w_i$, то можно понять, что благодаря модулям и разности наша функция отдаленно напоминает параболу. На $\pm \infty$ она уходит в бесконечность, а в диапазоне $x_i$ она принимает какие-то ограниченные значения (если $w_i$ ограничены). Так как функция модуля линейна, все точки (на двумерном графике, где по абсциссе $x_i$, а по ординате $w_i$) будут соединены линиями. Минимум же данной функции будет находиться в точке с наименьшим весом. При этом может возникнуть плато. Наверное, это никак не испортит ситуацию.
-
-        Вернемся к $(x_i, y_i)$. Рассуждения аналогичные одномерной задачи. Находим подходящую точку сначала для $x$, потом для $y$ и получаем $(x^{*}, y^{*})$.
+        Если рассмотреть одномерную задачу, когда даны $n$ точек $x_i$ и хочется найти $x^{*}$ такую, что
+        \begin{equation}
+          \max\limits_i(|x_i-x^{*}|) \rightarrow \min,
+        \end{equation}
+        то очевидно, что интересующая нас точка будет находиться ровно посередине между самой левой точкой и самой правой точкой, потому что, если начать сдигаться влево или вправо, то максимальный из модулей разностей будет увеличиваться, так как одно из расстояний (до крайнего левого или до крайнего правого) будет увеличиваться. Поэтому нужно брать именно середину. Середину можно получить следующим образом: берем массив точек $[x_i]$ и сортируем его, получаем массив точек $[x_i']$, в котором выполняется свойство
+        \begin{equation}
+          x_{i}' \leq x_{i+1}'.
+        \end{equation}
+        Теперь центральную точку вычислить легко через полусумму граничных точек:
+        \begin{equation}
+          x^{*} = \frac{x_{0}' + x_{n-1}'}{2}.
+        \end{equation}
+        Вернемся к исходной задаче: сначала по алгоритму выше найдем $x^{*}$, потом $y^{*}$:
+        \begin{equation}
+          \begin{cases}
+            x^{*} = \dfrac{x_{0}' + x_{n-1}'}{2}, \\
+            y^{*} = \dfrac{y_{0}' + y_{n-1}'}{2}.
+          \end{cases}
+        \end{equation}
       \end{solution}
       \item \onlygroup{Крыштаповича} $\max\limits_i \Bigl[ |x_i-x^{*}|+|y_i-y^{*}|  \Bigr] \rightarrow \min$
       \item \onlygroup{Крыштаповича} $\sum\limits_i \Bigl[ (x_i-x^{*})^2+(y_i-y^{*})^2  \Bigr] \rightarrow \min$
