--- a/hw06.tex
+++ b/hw06.tex
@@ -152,6 +152,9 @@
         \end{equation}
       \end{solution}
       \item \onlygroup{Крыштаповича} $\max\limits_i \Bigl[ |x_i-x^{*}|+|y_i-y^{*}|  \Bigr] \rightarrow \min$
+      \begin{solution}
+        Кажется, что здесь подойдет то же самое решение, которое было предложено в предыдущей задаче, потому что сумма двух неотрицательных чисел будет стремиться к минимуму (нулю) тогда, когда оба слагаемых будут стремиться к нулю. Понятно, что центр (или медиана) будет гарантировать, что каждое из слагаемых $|x_i-x^{*}|$ и $|y_i-y^{*}|$ будет минимальным, поэтому и сумма будет минимальной.
+      \end{solution}
       \item \onlygroup{Крыштаповича} $\sum\limits_i \Bigl[ (x_i-x^{*})^2+(y_i-y^{*})^2  \Bigr] \rightarrow \min$
       \item $\sum\limits_i \Bigl[ w_i(|x_i-x^{*}|+|y_i-y^{*}|) \Bigr] \rightarrow \min$
       \item $\max\limits_i \Bigl[ w_i(|x_i-x^{*}|+|y_i-y^{*}|) \Bigr] \rightarrow \min$.
