sln: add sln to hw07

--- a/hw07.tex
+++ b/hw07.tex
@@ -89,6 +89,16 @@
   \item \exceptgroup{Мишунина}
     Даны две последовательности длины $n$. В одной из последовательностей все элементы различны. Найдите
     их наидлиннейшую общую подпоследовательность за $\O(n \log n)$. 
+	\begin{solution}
+    Создадим хэш таблицу (за $\O(n)$) от строки, в которой нет повторяющихся элементов. Она будет в качестве ключей хранить значения последовательности, а в качестве значений -- индексы этих значений. Начнем итерироваться по элементам другой последовательности и будем заполнять массив $a$, в котором будут храниться индексы из заготовленной хэш таблицы. Заполнять массив будем по следующему правилу: значение $idx$ $i$-го элемента массива $a$ должно быть таким, что:
+    \begin{equation}
+        a[k-1] < idx < a[k].
+    \end{equation}
+    Получается, что массив $a$ заполняется таким образом, что он в любой момент времени отсортирован и для того, чтобы найти подходящий $k$, можно воспользоваться бинарным поиском (за $\O(\log n)$). В момент обновления элемента массива $a$ мы будем добавлять соответствующий индексу $idx$ элемент последовательности к нашей искомой наидлиннейшей общей подпоследовательности. На выходе получаем подпоследовательность и ее длину. Корректность: мы заполняли массив индексами строки, в которых происходил скачек значения. Асимптотика: $\O(n+m)\cdot \log n$, где $m$ -- количество совпадений в строках, которое в нашем случае максимум $n$, т.к. в одной строке все символы различны, поэтому итоговая асимптотика
+    \begin{equation}
+      \O(n+n)\cdot \log n = \O(n \log n).
+    \end{equation} 
+	\end{solution}
 
   \item \exceptgroup{Мишунина} Дано рекуррентное соотношение:
     $$\begin{matrix}
@@ -98,6 +108,47 @@
     \end{matrix}$$
     Известны $a_0, a_1, b_0, b_1, c_0, c_1$.
     Найдите $a_n, b_n, c_n$ по модулю $p$ за $\O(\log n)$.
+  \begin{solution}
+    Запишем в матричной форме:
+    \begin{equation}
+      \begin{pmatrix}
+        a_n \\
+        b_n \\
+        c_n \\
+        0 \\
+        0
+      \end{pmatrix} =
+      \begin{pmatrix}
+        1 & 0 & 2 & 0 & 1\\ 
+        0 & 0 & -1 & 0 & 5\\ 
+        0 & -1 & 0 & 1 & 0\\
+        0 & 0 & 0 & 0 & 0\\ 
+        0 & 0 & 0 & 0 & 0\\ 
+      \end{pmatrix} \cdot
+      \begin{pmatrix}
+        a_{n-1} \\
+        b_{n-1} \\
+        c_{n-1} \\
+        c_{n-2} \\
+        1
+      \end{pmatrix} =
+      \begin{pmatrix}
+        1 & 0 & 2 & 0 & 1\\ 
+        0 & 0 & -1 & 0 & 5\\ 
+        0 & -1 & 0 & 1 & 0\\ 
+        0 & 0 & 0 & 0 & 0\\ 
+        0 & 0 & 0 & 0 & 0\\ 
+      \end{pmatrix}^{n-1} \cdot
+      \begin{pmatrix}
+        a_{1} \\
+        b_{1} \\
+        c_{1} \\
+        c_{0} \\
+        1
+      \end{pmatrix}
+    \end{equation}
+    Используем быстрое возведение в степень для матриц. Отсюда и асимптотика $\O(\log n)$.
+  \end{solution}
     
   \item
     Дана строка $s$ длины $n$. Для каждой пары $(i, j)$ найти длину максимального
@@ -108,6 +159,9 @@
     $p_1, p_2, \dots, p_n$. Требуется посчитать вероятность выпадения
     ровно $k$ орлов за $\O(n \cdot k)$. Операции над числами считать 
     выполнимыми за $\O(1)$.
+  \begin{solution}
+    Решим через динамику. Заведем матрицу $dp[i][j]$, в которой будет записано, вероятность выпадения $i$ орлов среди первых $j$ бросков. Заполним в этой таблице базу: $dp[0][0] = 1$ -- вероятность выкинуть 0 орлов среди 0 бросков; можно заполнить диагональ: $dp[1][1] = p_1$, $dp[2][2] = p_1*p_2$, $dp[3][3] = p_1*p_2*p_3$, ...; можно заполнить все, что ниже диагонали -- там нули, потому что нельзя выбросить больше орлов, чем всего бросков произведено; и еще можно заполнить всю первую строчку, где выбросить 0 орлов среди скольки-то бросков: $dp[0][1] = (1-p_1)$, $dp[0][2] = (1-p_1)*(1-p_2)$, $dp[0][3] = (1-p_1)*(1-p_2)*(1-p_3)$, ... . Запишем переход: $dp[i][j] = dp[i-1][j](1-p[i])+dp[i-1][j-1]p[i]$ -- означает, что мы либо на предыдущем шаге набрали нужное количество орлов, поэтому на данном шаге нужно выкинуть решку, либо нам нужно на этом шаге выбросить орла в противном случае. Получается, что мы заполняем эту матрицу сверху слева вправо вниз. Чтобы вычислить текущую клетку нам нужна клетка левее и левее выше. База нам это обеспечила. Мы корректно заполняем таблицу и получаем корректный ответ в правом нижнем углу (выше блока нулей). Асимптотика: заполняем матрицу размеров $n\cdot k \Rightarrow \O(n\cdot k)$
+  \end{solution}
 
 %   \item \onlygroup{Мишунина} \textbf{LZSS}\\
 % 	Дана строка из латинских букв длины $n$, нужно ее запаковать в максимально короткую,
