--- a/algo_template.tex
+++ b/algo_template.tex
@@ -90,6 +90,7 @@
   % \input{hw04.tex}
   % \input{hw05.tex}
   % \input{hw06.tex}
-  \input{hw07.tex}
+  % \input{hw07.tex}
+  \input{hw08.tex}
 
 \end{document}
